--- a/service.html
+++ b/service.html
@@ -123,18 +123,11 @@
                         </div>
                         <div class="p-4">
                             <h4 class="mb-3">CCTV Installation</h4>
-                            <p>Professional security camera installation for homes and businesses:</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check text-success me-2"></i>Complete system setup</li>
-                                <li><i class="fa fa-check text-success me-2"></i>24/7 monitoring support</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Regular maintenance</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Remote access setup</li>
-                            </ul>
-                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                            <p>Professional security camera installation for homes and businesses. Complete system setup, remote access, and 24/7 support.</p>
+                            <a href="service-cctv.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
-                
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" id="networking">
                     <div class="service-item bg-light rounded">
                         <div class="overflow-hidden">
@@ -142,14 +135,8 @@
                         </div>
                         <div class="p-4">
                             <h4 class="mb-3">Network Solutions</h4>
-                            <p>Expert WiFi and network installation services:</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check text-success me-2"></i>WiFi coverage optimization</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Network security setup</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Business network solutions</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Ongoing support</li>
-                            </ul>
-                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                            <p>Expert WiFi and network installation services for homes and businesses. Coverage optimization, security, and ongoing support.</p>
+                            <a href="service-networking.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -160,33 +147,20 @@
                         </div>
                         <div class="p-4">
                             <h4 class="mb-3">Computer Lab Setup</h4>
-                            <p>Complete computer lab installation and maintenance:</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check text-success me-2"></i>Full lab installation</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Network configuration</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Software setup</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Regular maintenance</li>
-                            </ul>
-                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                            <p>Complete computer lab installation and maintenance. Network configuration, software setup, and regular support.</p>
+                            <a href="service-lab.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
-
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" id="lab">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s" id="website">
                     <div class="service-item bg-light rounded">
                         <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/lab2 (1).jpg" alt="Computer Lab Setup">
+                            <img class="img-fluid w-100" src="img/cameraabout.jpg" alt="Website Maintenance & Development">
                         </div>
                         <div class="p-4">
-                            <h4 class="mb-3">Website mentainance and Developing</h4>
-                            <p>Complete websites developing and maintenance:</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-check text-success me-2"></i>Full website designing</li>
-                                <li><i class="fa fa-check text-success me-2"></i>Search Engine Optimization</li>
-                                <li><i class="fa fa-check text-success me-2"></i>12 months free mentainance</li>
-                                <li><i class="fa fa-check text-success me-2"></i>12 months hosting</li>
-                            </ul>
-                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                            <h4 class="mb-3">Website Maintenance & Development</h4>
+                            <p>Full website design, SEO, 12 months free maintenance, and hosting. Tailored for your business or institution.</p>
+                            <a href="service-website.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -231,32 +205,27 @@
                         <h1 class="mb-4">Book For A Service</h1>
                         <form id="service-booking-form">
                             <div class="row g-3">
-                                <div class="col-12 col-sm-6">
+                                <div class="col-md-6">
                                     <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
                                 </div>
-                                <div class="col-12 col-sm-6">
+                                <div class="col-md-6">
                                     <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
                                 </div>
-                                <div class="col-12 col-sm-6">
+                                <div class="col-12">
                                     <select name="service" class="form-select border-0" style="height: 55px;" required>
                                         <option value="">Select A Service</option>
                                         <option value="CCTV Installation">CCTV Installation</option>
                                         <option value="Network Solutions">Network Solutions</option>
                                         <option value="Computer Lab Setup">Computer Lab Setup</option>
+                                        <option value="Website Maintenance & Development">Website Maintenance & Development</option>
                                     </select>
                                 </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text" name="date"
-                                            class="form-control border-0 datetimepicker-input"
-                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;" required>
-                                    </div>
-                                </div>
                                 <div class="col-12">
-                                    <textarea name="special_request" class="form-control border-0" placeholder="Special Request"></textarea>
+                                    <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Tell us about your requirements or specific service needs" required></textarea>
                                 </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
+                                <div class="col-12 d-flex flex-column flex-md-row gap-2">
+                                    <button class="btn btn-primary w-100 py-3" type="button" id="service-quote-email-btn">Quote with Email</button>
+                                    <button class="btn btn-success w-100 py-3" type="button" id="service-quote-whatsapp-btn">Quote by WhatsApp</button>
                                 </div>
                             </div>
                         </form>
@@ -266,6 +235,48 @@
         </div>
     </div>
     <!-- Booking End -->
+    <script>
+        // Service booking form handlers
+        document.getElementById('service-quote-email-btn').addEventListener('click', function() {
+            const form = document.getElementById('service-booking-form');
+            const name = form.elements['name'].value;
+            const email = form.elements['email'].value;
+            const service = form.elements['service'].value;
+            const requirements = form.elements['requirements'].value;
+            if (!name || !email || !service || !requirements) {
+                alert('Please fill in all fields.');
+                return;
+            }
+            const subject = encodeURIComponent('Service Quote Request: ' + service);
+            const body = encodeURIComponent(
+                'Name: ' + name + '\n' +
+                'Email: ' + email + '\n' +
+                'Service: ' + service + '\n' +
+                'Requirements: ' + requirements
+            );
+            window.location.href = `mailto:customers@alelabs.tech?subject=${subject}&body=${body}`;
+        });
+        document.getElementById('service-quote-whatsapp-btn').addEventListener('click', function() {
+            const form = document.getElementById('service-booking-form');
+            const name = form.elements['name'].value;
+            const email = form.elements['email'].value;
+            const service = form.elements['service'].value;
+            const requirements = form.elements['requirements'].value;
+            if (!name || !email || !service || !requirements) {
+                alert('Please fill in all fields.');
+                return;
+            }
+            const phone = '250788612171';
+            const message = encodeURIComponent(
+                'Service Quote Request\n' +
+                'Name: ' + name + '\n' +
+                'Email: ' + email + '\n' +
+                'Service: ' + service + '\n' +
+                'Requirements: ' + requirements
+            );
+            window.open(`https://wa.me/${phone}?text=${message}`, '_blank');
+        });
+    </script>
 
     <!-- Testimonial Start -->
     <!-- <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
