--- a/index.html
+++ b/index.html
@@ -327,7 +327,33 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="bg-light text-center p-5">
-                                                <h1 class="mb-4">Book For A Service</h1>                        <form id="booking-form">                            <div class="row g-3">                                <div class="col-12 col-sm-6">                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>                                </div>                                <div class="col-12 col-sm-6">                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>                                </div>                                <div class="col-12 col-sm-6">                                    <select class="form-select border-0" style="height: 55px;" required>                                        <option value="">Select A Service</option>                                        <option value="CCTV installations">CCTV installations</option>                                        <option value="Internet connectivity">Internet connectivity</option>                                        <option value="Computer lab">Computer lab</option>                                    </select>                                </div>                                <div class="col-12 col-sm-6">                                    <div class="date" id="date1" data-target-input="nearest">                                        <input type="text"                                            class="form-control border-0 datetimepicker-input"                                            placeholder="Service Date" data-target="#date1" data-toggle="datetimepicker" style="height: 55px;" required>                                    </div>                                </div>                                <div class="col-12">                                    <textarea class="form-control border-0" placeholder="Special Request" required></textarea>                                </div>                                <div class="col-12">                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>                                </div>                            </div>                        </form>
+                                                <h1 class="mb-4">Book For A Service</h1>
+<form id="home-booking-form">
+    <div class="row g-3">
+        <div class="col-md-6">
+            <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
+        </div>
+        <div class="col-md-6">
+            <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
+        </div>
+        <div class="col-12">
+            <select name="service" class="form-select border-0" style="height: 55px;" required>
+                <option value="">Select A Service</option>
+                <option value="CCTV Installation">CCTV Installation</option>
+                <option value="Network Solutions">Network Solutions</option>
+                <option value="Computer Lab Setup">Computer Lab Setup</option>
+                <option value="Other Services">Other Services</option>
+            </select>
+        </div>
+        <div class="col-12">
+            <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Tell us about your requirements or specific service needs" required></textarea>
+        </div>
+        <div class="col-12 d-flex flex-column flex-md-row gap-2">
+            <button class="btn btn-primary w-100 py-3" type="button" id="home-quote-email-btn">Quote with Email</button>
+            <button class="btn btn-success w-100 py-3" type="button" id="home-quote-whatsapp-btn">Quote by WhatsApp</button>
+        </div>
+    </div>
+</form>
                     </div>
                 </div>
             </div>
@@ -476,4 +502,47 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>    <!-- Forms Javascript -->    <script src="js/forms.js"></script>    <!-- Footer Newsletter Javascript -->    <script src="js/footer-newsletter.js"></script></body></html>
+        <!-- Template Javascript -->    <script src="js/main.js"></script>    <!-- EmailJS Library -->    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>    <!-- Forms Javascript -->    <script src="js/forms.js"></script>    <!-- Footer Newsletter Javascript -->    <script src="js/footer-newsletter.js"></script>
+<script>
+    // Home page booking form handlers
+    document.getElementById('home-quote-email-btn').addEventListener('click', function() {
+        const form = document.getElementById('home-booking-form');
+        const name = form.elements['name'].value;
+        const email = form.elements['email'].value;
+        const service = form.elements['service'].value;
+        const requirements = form.elements['requirements'].value;
+        if (!name || !email || !service || !requirements) {
+            alert('Please fill in all fields.');
+            return;
+        }
+        const subject = encodeURIComponent('Service Quote Request: ' + service);
+        const body = encodeURIComponent(
+            'Name: ' + name + '\n' +
+            'Email: ' + email + '\n' +
+            'Service: ' + service + '\n' +
+            'Requirements: ' + requirements
+        );
+        window.location.href = `mailto:customers@alelabs.tech?subject=${subject}&body=${body}`;
+    });
+    document.getElementById('home-quote-whatsapp-btn').addEventListener('click', function() {
+        const form = document.getElementById('home-booking-form');
+        const name = form.elements['name'].value;
+        const email = form.elements['email'].value;
+        const service = form.elements['service'].value;
+        const requirements = form.elements['requirements'].value;
+        if (!name || !email || !service || !requirements) {
+            alert('Please fill in all fields.');
+            return;
+        }
+        const phone = '250788612171';
+        const message = encodeURIComponent(
+            'Service Quote Request\n' +
+            'Name: ' + name + '\n' +
+            'Email: ' + email + '\n' +
+            'Service: ' + service + '\n' +
+            'Requirements: ' + requirements
+        );
+        window.open(`https://wa.me/${phone}?text=${message}`, '_blank');
+    });
+</script>
+</body></html>
