--- a/404.html
+++ b/404.html
@@ -94,6 +94,7 @@
                             <a href="404.html" class="dropdown-item active">404 Page</a>
                         </div>
                     </div>
+                    <a href="education.html" class="nav-item nav-link">Education</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
@@ -172,6 +173,17 @@
                     <a class="btn btn-link" href="">Networking solutions</a>
                     <a class="btn btn-link" href="">Overall IT support</a>
                     <a class="btn btn-link" href="">Maintenance</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Quick Links</h4>
+                    <a class="btn btn-link" href="index.html">Home</a>
+                    <a class="btn btn-link" href="about.html">About</a>
+                    <a class="btn btn-link" href="service.html">Services</a>
+                    <a class="btn btn-link" href="booking.html">Booking</a>
+                    <a class="btn btn-link" href="team.html">Technicians</a>
+                    <a class="btn btn-link" href="testimonial.html">Testimonial</a>
+                    <a class="btn btn-link" href="education.html">Education</a>
+                    <a class="btn btn-link" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
