--- a/products.html
+++ b/products.html
@@ -99,6 +99,7 @@
                     <a href="products.html" class="nav-item nav-link active">Products</a>
                     <a href="pricing.html" class="nav-item nav-link">Pricing</a>
                     <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
+                    <a href="education.html" class="nav-item nav-link">Education</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <a href="#" class="btn btn-primary position-relative ms-lg-3" data-bs-toggle="modal" data-bs-target="#checkoutModal">
@@ -239,6 +240,16 @@
                     <a class="btn btn-link" href="">Networking solutions</a>
                     <a class="btn btn-link" href="">Overall IT support</a>
                     <a class="btn btn-link" href="">Maintenance</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Quick Links</h4>
+                    <a class="btn btn-link" href="index.html">Home</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
+                    <a class="btn btn-link" href="products.html">Products</a>
+                    <a class="btn btn-link" href="pricing.html">Pricing</a>
+                    <a class="btn btn-link" href="guidelines.html">Guidelines</a>
+                    <a class="btn btn-link" href="education.html">Education</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
                 </div>
             </div>
         </div>
