--- a/service.html
+++ b/service.html
@@ -88,6 +88,7 @@
                     <a href="products.html" class="nav-item nav-link">Products</a>
                     <a href="pricing.html" class="nav-item nav-link">Pricing</a>
                     <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
+                    <a href="education.html" class="nav-item nav-link">Education</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
@@ -155,7 +156,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s" id="website">
                     <div class="service-item bg-light rounded">
                         <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/cameraabout.jpg" alt="Website Maintenance & Development">
+                            <img class="img-fluid w-100" src="img/webdev.png" alt="Website Maintenance & Development">
                         </div>
                         <div class="p-4">
                             <h4 class="mb-3">Website Maintenance & Development</h4>
@@ -380,6 +381,16 @@
                     <a class="btn btn-link" href="">Networking solutions</a>
                     <a class="btn btn-link" href="">Overall IT support</a>
                     <a class="btn btn-link" href="">Maintenance</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-light mb-4">Quick Links</h4>
+                    <a class="btn btn-link" href="index.html">Home</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
+                    <a class="btn btn-link" href="products.html">Products</a>
+                    <a class="btn btn-link" href="pricing.html">Pricing</a>
+                    <a class="btn btn-link" href="guidelines.html">Guidelines</a>
+                    <a class="btn btn-link" href="education.html">Education</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
                 </div>
             </div>
         </div>
