--- a/service-website.html
+++ b/service-website.html
@@ -78,51 +78,55 @@
     </div>
     <!-- Navbar End -->
     <!-- Service Detail Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded w-100 mb-4" src="img/webdev.png" alt="Website Maintenance & Development">
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h1 class="text-primary mb-3">Website Maintenance & Development</h1>
-                    <p class="mb-4">We provide full website design, search engine optimization, 12 months of free maintenance, and hosting. Our solutions are tailored for your business or institution to ensure a strong online presence.</p>
-                    <ul class="list-unstyled mb-4">
-                        <li><i class="fa fa-check text-success me-2"></i>Full website design and development</li>
-                        <li><i class="fa fa-check text-success me-2"></i>Search Engine Optimization (SEO)</li>
-                        <li><i class="fa fa-check text-success me-2"></i>12 months free maintenance</li>
-                        <li><i class="fa fa-check text-success me-2"></i>12 months hosting included</li>
-                        <li><i class="fa fa-check text-success me-2"></i>Custom solutions for your needs</li>
-                    </ul>
-                </div>
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5 align-items-center">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <img class="img-fluid rounded w-100 mb-4" src="img/it-consultation.png" alt="Free IT Help & Consultation">
             </div>
-            <div class="row mt-5 justify-content-center">
-                <div class="col-lg-8">
-                    <div class="bg-light rounded p-5">
-                        <h2 class="mb-4 text-center">Request a Quote</h2>
-                        <form id="website-quote-form">
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
-                                </div>
-                                <div class="col-md-6">
-                                    <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
-                                </div>
-                                <div class="col-12">
-                                    <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Tell us about your requirements or specific needs" required></textarea>
-                                </div>
-                                <div class="col-12 d-flex flex-column flex-md-row gap-2">
-                                    <button class="btn btn-primary w-100 py-3" type="button" id="website-quote-email-btn">Quote with Email</button>
-                                    <button class="btn btn-success w-100 py-3" type="button" id="website-quote-whatsapp-btn">Quote by WhatsApp</button>
-                                </div>
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                <h1 class="text-primary mb-3">Free IT Help & Consultation</h1>
+                <p class="mb-4">
+                    We provide free IT assistance and advisory services to individuals, companies, and organizations. 
+                    Our goal is to help you solve technical problems, optimize your systems, and make informed IT decisions.
+                </p>
+                <ul class="list-unstyled mb-4">
+                    <li><i class="fa fa-check text-success me-2"></i>Personal IT support and troubleshooting</li>
+                    <li><i class="fa fa-check text-success me-2"></i>IT consulting for small and medium businesses</li>
+                    <li><i class="fa fa-check text-success me-2"></i>Advice on hardware, software, and networks</li>
+                    <li><i class="fa fa-check text-success me-2"></i>Guidance on IT strategies and best practices</li>
+                    <li><i class="fa fa-check text-success me-2"></i>Support for both local and remote clients</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row mt-5 justify-content-center">
+            <div class="col-lg-8">
+                <div class="bg-light rounded p-5">
+                    <h2 class="mb-4 text-center">Request Free IT Help</h2>
+                    <form id="it-help-form">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <input type="text" name="name" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
                             </div>
-                        </form>
-                    </div>
+                            <div class="col-md-6">
+                                <input type="email" name="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
+                            </div>
+                            <div class="col-12">
+                                <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Describe your IT issue or consultation needs" required></textarea>
+                            </div>
+                            <div class="col-12 d-flex flex-column flex-md-row gap-2">
+                                <button class="btn btn-primary w-100 py-3" type="button" id="it-help-email-btn">Request via Email</button>
+                                <button class="btn btn-success w-100 py-3" type="button" id="it-help-whatsapp-btn">Request via WhatsApp</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Service Detail End -->
+</div>
+<!-- Service Detail End -->
+
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
