--- a/service.html
+++ b/service.html
@@ -159,8 +159,8 @@
                             <img class="img-fluid w-100" src="img/webdev.png" alt="Website Maintenance & Development">
                         </div>
                         <div class="p-4">
-                            <h4 class="mb-3">Website Maintenance & Development</h4>
-                            <p>Full website design, SEO, 12 months free maintenance, and hosting. Tailored for your business or institution.</p>
+                            <h4 class="mb-3">Free IT Help & Consultation</h4>
+                            <p>Our goal is to help you solve technical problems, optimize your systems, and make informed IT decisions..</p>
                             <a href="service-website.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
