--- a/service-website.html
+++ b/service-website.html
@@ -82,7 +82,7 @@
     <div class="container">
         <div class="row g-5 align-items-center">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                <img class="img-fluid rounded w-100 mb-4" src="img/it-consultation.png" alt="Free IT Help & Consultation">
+                <img class="img-fluid rounded w-100 mb-4" src="img/webdev.png" alt="Free IT Help & Consultation">
             </div>
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                 <h1 class="text-primary mb-3">Free IT Help & Consultation</h1>
