--- a/education.html
+++ b/education.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <i class="fa fa-phone-alt text-primary me-2"></i>
-                    <p class="m-0">+250 788 612171</p>
+                    <p class="m-0">+250795884120</p>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Call Us Now</p>
-                        <h5 class="m-0 text-secondary">+250 788 612171</h5>
+                        <h5 class="m-0 text-secondary">+250795884120</h5>
                     </div>
                 </div>
             </div>
@@ -319,7 +319,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250795884120</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -413,7 +413,7 @@
                 alert('Please fill in all fields.');
                 return;
             }
-            const phone = '250788612171';
+            const phone = '250795884120';
             const message = encodeURIComponent(
                 'Education Service Quote Request\n' +
                 'Name: ' + name + '\n' +
