--- a/checkout.html
+++ b/checkout.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <i class="fa fa-phone-alt text-primary me-2"></i>
-                    <p class="m-0">+250 788 612171</p>
+                    <p class="m-0">+250795884120</p>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Call Us Now</p>
-                        <h5 class="m-0 text-secondary">+250 788 612171</h5>
+                        <h5 class="m-0 text-secondary">+250795884120</h5>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250795884120</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -256,7 +256,7 @@
         });
         orderMsg += `Total: RWF ${Object.keys(cart).reduce((sum, id) => sum + products.find(p => p.id == id).price * cart[id], 0).toLocaleString()}%0A`;
         orderMsg += `Name: ${name}%0APhone: ${phone}%0AAddress: ${address}`;
-        const whatsappUrl = `https://wa.me/250788612171?text=${orderMsg}`;
+        const whatsappUrl = `https://wa.me/250795884120?text=${orderMsg}`;
         window.open(whatsappUrl, '_blank');
     });
     renderBasket();
