--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    
+    <!-- LinkedIn Badge Script -->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 
 <body>
@@ -238,6 +241,38 @@
     </div>
     <!-- About End -->
     <!-- Fact End -->
+
+
+    <!-- Founder Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow slideInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h1 class="text-primary mb-3">Our Founder</h1>
+                <p class="mb-4">Meet the visionary behind Alelabs Tech</p>
+            </div>
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <h6 class="text-secondary text-uppercase">Leadership</h6>
+                    <h1 class="mb-4">Felix ABIMANA URUMENESHA</h1>
+                    <p class="mb-4">Our founder brings years of experience in IT and networking solutions, leading Alelabs Tech with a vision to provide cutting-edge technology solutions to homes and businesses across Rwanda.</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Expert in IT Infrastructure</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Network Security Specialist</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Innovation-Driven Leadership</p>
+                    <div class="mt-4">
+                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="felix-abimana-urumenesha-0524b4367" data-version="v1">
+                            <a class="badge-base__link LI-simple-link" href="https://rw.linkedin.com/in/felix-abimana-urumenesha-0524b4367?trk=profile-badge">Felix ABIMANA URUMENESHA</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 pt-4" style="min-height: 400px;">
+                    <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/profiles.png" style="object-fit: cover; padding: 0 0 50px 100px;" alt="Felix ABIMANA URUMENESHA">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Founder End -->
 
 
     <!-- Service Start -->
