--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
     <div class="container-fluid p-0 mb-5">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/Terminal-2.png" alt="Hikvision Fingerprint Access Control">
+                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .4);">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Hikvision Fingerprint Access Control 2025</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Professional selling and installation of Hikvision fingerprint access control for offices, schools and businesses for time attendance. Price: 246,000 RWF all included.</p>
+                                <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
+                                <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel-item position-relative">
                 <img class="img-fluid" src="img/cctvbg.jpg" alt="CCTV Installation">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(0, 0, 0, .4);">
                     <div class="container">
@@ -201,6 +216,16 @@
                         <h5 class="mb-3">Computer Lab Setup</h5>
                         <p class="mb-3">Complete computer lab installation including network, devices, and software configuration.</p>
                         <a href="service.html#lab" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="overflow-hidden">
+                        <img class="img-fluid w-100 h-100" src="img/Terminal-2.png" alt="Hikvision Fingerprint Access Control">
+                    </div>
+                    <div class="d-flex flex-column bg-light p-4">
+                        <h5 class="mb-3">Hikvision Fingerprint Access Control</h5>
+                        <p class="mb-3">Professional selling and installation of Hikvision fingerprint access control for offices, schools and businesses for time attendance. Price: 246,000 RWF all included.</p>
+                        <a href="contact.html" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
