--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <i class="fa fa-phone-alt text-primary me-2"></i>
-                    <p class="m-0">+250795884120</p>
+                    <p class="m-0">+250788612171</p>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Call Us Now</p>
-                        <h5 class="m-0 text-secondary">+250795884120</h5>
+                        <h5 class="m-0 text-secondary">+250788612171</h5>
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                         </div>
                         <div class="ms-3">
                             <p class="fs-5 fw-medium mb-2 text-white">Emergency 24/7</p>
-                            <h3 class="m-0 text-secondary">+250795884120</h3>
+                            <h3 class="m-0 text-secondary">+250788612171</h3>
                         </div>
                     </div>
                 </div>
@@ -506,8 +506,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250795884120</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250788612171</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -593,7 +593,7 @@
             'Service: ' + service + '\n' +
             'Requirements: ' + requirements
         );
-        window.location.href = `mailto:customers@alelabs.tech?subject=${subject}&body=${body}`;
+        window.location.href = `mailto:info@alelabs.tech?subject=${subject}&body=${body}`;
     });
     document.getElementById('home-quote-whatsapp-btn').addEventListener('click', function() {
         const form = document.getElementById('home-booking-form');
@@ -605,7 +605,7 @@
             alert('Please fill in all fields.');
             return;
         }
-        const phone = '250795884120';
+        const phone = '250788612171';
         const message = encodeURIComponent(
             'Service Quote Request\n' +
             'Name: ' + name + '\n' +
