Update phone number references to new number

--- a/products.html
+++ b/products.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <i class="fa fa-phone-alt text-primary me-2"></i>
-                    <p class="m-0">+250795884120</p>
+                    <p class="m-0">+250788612171</p>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Call Us Now</p>
-                        <h5 class="m-0 text-secondary">+250795884120</h5>
+                        <h5 class="m-0 text-secondary">+250788612171</h5>
                     </div>
                 </div>
             </div>
@@ -219,8 +219,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250795884120</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250788612171</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -440,7 +440,7 @@
         });
         orderMsg += `Total: RWF ${Object.keys(cart).reduce((sum, id) => sum + products.find(p => p.id == id).price * cart[id], 0).toLocaleString()}%0A`;
         orderMsg += `Name: ${name}%0APhone: ${phone}%0AAddress: ${address}`;
-        const whatsappUrl = `https://wa.me/250795884120?text=${orderMsg}`;
+        const whatsappUrl = `https://wa.me/250788612171?text=${orderMsg}`;
         window.open(whatsappUrl, '_blank');
         // Clear cart and show thank you modal
         localStorage.removeItem('cart');
@@ -456,7 +456,7 @@
     });
     </script>
     <!-- Floating WhatsApp Support Button -->
-    <a href="https://wa.me/250795884120" target="_blank" id="whatsapp-support-btn" style="position:fixed;bottom:24px;right:24px;z-index:1050;display:flex;align-items:center;justify-content:center;width:56px;height:56px;background:#25d366;color:#fff;border-radius:50%;box-shadow:0 2px 8px rgba(0,0,0,0.15);font-size:2rem;">
+    <a href="https://wa.me/250788612171" target="_blank" id="whatsapp-support-btn" style="position:fixed;bottom:24px;right:24px;z-index:1050;display:flex;align-items:center;justify-content:center;width:56px;height:56px;background:#25d366;color:#fff;border-radius:50%;box-shadow:0 2px 8px rgba(0,0,0,0.15);font-size:2rem;">
         <i class="fab fa-whatsapp"></i>
     </a>
 </body>
