Update contact information in guidelines.html

--- a/guidelines.html
+++ b/guidelines.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <i class="fa fa-phone-alt text-primary me-2"></i>
-                    <p class="m-0">+250795884120</p>
+                    <p class="m-0">+250788612171</p>
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="ms-3">
                         <p class="mb-1 text-white">Call Us Now</p>
-                        <h5 class="m-0 text-secondary">+250795884120</h5>
+                        <h5 class="m-0 text-secondary">+250788612171</h5>
                     </div>
                 </div>
             </div>
@@ -289,8 +289,8 @@
                                     <h5><i class="fa fa-phone-alt text-primary me-2"></i>Contact Information</h5>
                                     <p>For urgent assistance or immediate support:</p>
                                     <ul>
-                                        <li>Call: +250795884120</li>
-                                        <li>Email: customers@alelabs.tech</li>
+                                        <li>Call: +250788612171</li>
+                                        <li>Email: info@alelabs.tech</li>
                                         <li>Hours: Mon-Thu 5PM-9PM, Fri 7PM-9PM, Sat-Sun 3PM-9PM</li>
                                     </ul>
                                 </div>
@@ -310,8 +310,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250795884120</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250788612171</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
